<resources>
    <string name="app_name">hf智能云</string>

    <string name="login">登录</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">发送验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>

    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>

    <string name="today_sign">今日签到</string>
    <string name="tomorrow_sign">明日签到</string>
    <string name="everyday_sign">每日签到</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>

    <string name="connection_error">Connection error.</string>

    <string name="china">china</string>

    <string name="cancel_str">取消</string>
    <string name="confirm_str">确定</string>
    <string name="remind_str">提示</string>
    <string name="remind_scaning_dev">正在扫描设备...</string>
    <string name="remind_scaning_dev_stop">停止扫描</string>
    <string name="scan_txt">扫描</string>
    <string name="scan_dev_txt">扫描设备</string>
    <string name="scan_no_dev">没有扫描到设备</string>

    <string name="ble_not_supported">你的手机不支持BLE</string>
    <string name="error_bluetooth_not_supported">你的手机不支持蓝牙</string>
    <string name="unknown_device">未知设备</string>
</resources>
