<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_retrieve_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/ly_retrieve_bar"
        layout="@layout/activity_main_login_navigation_bar"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/country_code_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16">

        <LinearLayout
            android:id="@+id/repwdll_countryCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repwd_country_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="+86"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/repwd_flag"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/repwd_country_code_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/none_bg"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/china"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:background="@color/gray" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_registermobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:counterEnabled="true"
        app:counterMaxLength="11">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_repwdmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mobile"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="@dimen/dp_4"
            android:gravity="center_vertical"
            android:hint="请输入手机号或邮箱"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/repwdphonetxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:drawableStart="@drawable/icon_yanzhencode"
            android:drawableLeft="@drawable/icon_yanzhencode"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:inputType="number"
            android:hint="请输入短信验证码"
            android:background="@null"/>

        <Button
            android:id="@+id/repwdtimebutton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:background="@drawable/bg_login_submit_lock"
            android:textColor="@color/white"
            android:text="获取"
            />

    </LinearLayout>
    <Button
        android:id="@+id/repwd_bt_retrieve_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit_lock"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/retrieve_pwd_step_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/retrieve_pwd_email_label_one"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_retrieve_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:text="@string/retrieve_pwd_email_label"
            android:textColor="@color/login_input_active"
            android:textSize="16sp"
            android:translationZ="0dp"
            tools:ignore="RtlSymmetry"
            tools:targetApi="lollipop" />


    </LinearLayout>


</LinearLayout>