<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg_login"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TextView
    android:id="@+id/register_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:layout_alignParentRight="true"
    android:layout_margin="20dp"
    android:textSize="18sp"
    android:drawableLeft="@drawable/icon_zc"
    android:text="注册"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:text="登录"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/country_code_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16">

            <LinearLayout
                android:id="@+id/ll_login_countryCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="+86"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/login_iv_flag"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/login_country_code_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@mipmap/none_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/china"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:background="@color/gray" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:counterEnabled="true"
            app:counterMaxLength="11">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mobile"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:hint="请输入手机号或邮箱"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:hint="请输入密码"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_selector_checkbox"
                android:checked="true"
                android:contentDescription="@null"
                android:textColor="@color/text_secondary_color"
                android:textSize="@dimen/font_12"
                tools:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hold_hint"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/gray"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_submit_lock"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_wechartlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_login_party_wechat"/>
            <ImageView
                android:id="@+id/iv_qqlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/ic_login_party_qq"/>
        </LinearLayout>
</LinearLayout>
    </LinearLayout>
</RelativeLayout>